changed heading to be fixed on the page, removed the lists, wrapped h1 and a tags under heading in a flex box, now it scales nicely with screen changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,18 +6,27 @@
 
 body {
     background-color: #d9dcd6;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .header {
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    position: fixed;
+    padding:10px 20px;
     background-color: #2a607c;
     color: #ffffff;
+    width:100%;
+    height:auto;
+    display:inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: baseline;
+    align-content:flex-start;
+    z-index: 2;
 }
 
 .header h1 {
-    display: inline-block;
     font-size: 48px;
+    flex-grow: 1;
 }
 
 .seo {
@@ -25,22 +34,22 @@ body {
 }
 
 .header div {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+    width:auto;
+    display: inline-flex;
+    align-items: baseline;
+    align-content:flex-start;
 }
 
-.header ul li {
-    display: inline-block;
-    margin-left: 25px;
-    list-style-type: none;
-}
-
-a {
+.header>div>a {
     color: #ffffff;
     text-decoration: none;
+    padding:10px 20px;
+    font-size: 22px;
+}
+
+.header>div>a:hover {
+    background-color:#145271;
+    border-radius: 10px;
 }
 
 p {
@@ -48,12 +57,15 @@ p {
 }
 
 .background-image {
+    position: relative; 
+    top:50px;
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
-    background-position: center;
+    background-position:center;
+    z-index: 1;
 }
 
 .float-left {
@@ -67,6 +79,8 @@ p {
 }
 
 .main {
+    position: relative;
+    top:50px;
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -76,7 +90,6 @@ p {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
@@ -91,13 +104,14 @@ p {
 }
 
 .aside {
+    position:relative;
+    top: 50px;
     margin-right: 20px;
     padding: 20px;
     clear: both;
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
 }
 
@@ -120,7 +134,6 @@ p {
 .footer {
     padding: 30px;
     clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
